--- a/index.html
+++ b/index.html
@@ -598,6 +598,10 @@
       flex-direction: column;
       justify-content: space-between;
       gap: 8px;
+
+      /* ✅ NEU: eigene Stacking-Context + oben drüber */
+      position: relative;
+      z-index: 9999;
     }
 
     .gcTop{
@@ -606,6 +610,14 @@
       justify-content: flex-end;
       gap: 10px;
       min-height: 48px;
+
+      /* ✅ NEU: 00P/Highscore 70px nach Norden */
+      position: relative;
+      top: -70px;
+
+      /* ✅ NEU: garantiert über allem */
+      z-index: 99999;
+      pointer-events: none;
     }
 
     .gcRight{
@@ -614,6 +626,10 @@
       align-items:flex-end;
       gap: 2px;
       user-select:none;
+
+      /* ✅ NEU: extra Absicherung */
+      position: relative;
+      z-index: 999999;
     }
 
     .gcPoints{
@@ -740,10 +756,7 @@
     #decisionPanel.pulseSeq .miniBtn:nth-child(6){ animation-delay: 0.50s; }
 
     /* =========================================================
-       ✅ NEU: Level-Wahl Panel (3 Gridzeilen hoch, 8 Spalten breit)
-       - erscheint NACH dem Zahlensetz-Zyklus
-       - mittig zentriert
-       - Schriftgröße passt sich an, damit nix über 8 Rasterspalten geht
+       ✅ Level-Wahl Panel
        ========================================================= */
     #levelPanel{
       width: 100%;
@@ -752,9 +765,16 @@
       height: 100%;
       display:flex;
       flex-direction: column;
-      justify-content: center; /* vertikal mittig in den 3 Grid-Zeilen */
-      align-items: center;     /* horizontal mittig */
+      justify-content: center;
+      align-items: center;
       gap: 10px;
+
+      /* ✅ NEU: alles 6px nach Norden */
+      transform: translateY(-6px);
+
+      /* (optional) stabiler stacking-context */
+      position: relative;
+      z-index: 9999;
     }
     #levelPanel.hidden{ display:none !important; }
 
@@ -767,7 +787,6 @@
       text-align:center;
       line-height: 1.05;
 
-      /* responsive, aber sicher innerhalb 8 Spalten */
       font-size: clamp(14px, 6vmin, 22px);
       max-width: 100%;
       white-space: nowrap;
@@ -795,7 +814,6 @@
       color: #2a160c;
       font-weight: 1000;
 
-      /* Schrift so wählen, dass 3 Buttons nebeneinander in 8 Spalten passen */
       font-size: clamp(12px, 4vmin, 18px);
       letter-spacing: 0.04em;
       line-height: 1.05;
@@ -912,13 +930,13 @@
             <div class="gcBottom" aria-label="Aktionen">
               <button id="btnSetNumbers" class="gcBtn set" type="button">ZAHLEN SETZEN</button>
 
-              <!-- ✅ NEU: Level Auswahl nach Zahlensetz-Zyklus -->
+              <!-- Level Auswahl nach Zahlensetz-Zyklus -->
               <div id="levelPanel" class="hidden" aria-label="Level wählen">
                 <div class="levelTitle" id="levelTitle">LEVEL WÄHLEN</div>
                 <div class="levelRow" aria-label="Level Buttons">
-                  <button id="btnLevelTrainee" class="levelBtn" type="button">Trainee</button>
-                  <button id="btnLevelBrainy" class="levelBtn" type="button">Brainy</button>
+                  <button id="btnLevelBrainee" class="levelBtn" type="button">Brainee</button>
                   <button id="btnLevelBrain" class="levelBtn" type="button">Brain</button>
+                  <button id="btnLevelBrainstorm" class="levelBtn" type="button">Brainstorm</button>
                 </div>
               </div>
 
@@ -968,12 +986,12 @@
     const gcPoints    = document.getElementById("gcPoints");
     const gcHi        = document.getElementById("gcHi");
 
-    /* ✅ NEU: Level Panel refs */
+    /* Level Panel refs */
     const levelPanel = document.getElementById("levelPanel");
     const levelTitle = document.getElementById("levelTitle");
-    const btnLevelTrainee = document.getElementById("btnLevelTrainee");
-    const btnLevelBrainy = document.getElementById("btnLevelBrainy");
+    const btnLevelBrainee = document.getElementById("btnLevelBrainee");
     const btnLevelBrain = document.getElementById("btnLevelBrain");
+    const btnLevelBrainstorm = document.getElementById("btnLevelBrainstorm");
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
@@ -1185,7 +1203,7 @@
       gameMode.classList.remove("hidden");
       btnSetNumbers.classList.remove("hidden");
       decisionPanel.classList.add("hidden");
-      levelPanel.classList.add("hidden");   /* ✅ NEU */
+      levelPanel.classList.add("hidden");
       enterSetAttention();
       setPoints(0);
       gcHi.textContent = "80";
@@ -1307,21 +1325,15 @@
       setRotationSnap();
     }
 
-    /* =========================================================
-       ✅ NEU: Levelwahl anzeigen (statt direkt Spielerphase)
-       ========================================================= */
     function beginLevelChoice(){
-      // Nach Zahlensetz-Zyklus: SetNumbers Button weg, Levelpanel rein
       btnSetNumbers.classList.add("hidden");
       decisionPanel.classList.add("hidden");
       levelPanel.classList.remove("hidden");
 
-      // keine Blink-Attention auf "Set" mehr (weil es den Button nicht gibt)
       setAttentionSet(false);
       setAttentionPlay(false);
       setAttentionSpeed(false);
 
-      // Title exakt wie gewünscht
       levelTitle.textContent = "LEVEL WÄHLEN";
     }
 
@@ -1368,12 +1380,10 @@
       await sleep(getTiming().holdMs);
       if(myToken!==setToken){ runningSet=false; return; }
 
-      // ===== Bisheriges Ende (Q3, W1 oben) =====
       advanceFullCW();
       showW();
       renderW();
 
-      // ✅ NEU: 3 zusätzliche komplette Kipps ab dem bisherigen Ende
       const EXTRA_KIPPS_AFTER_END = 3;
 
       await sleep(Math.round(getTiming().holdMs * 0.60));
@@ -1394,8 +1404,6 @@
       }
 
       runningSet = false;
-
-      // ✅ Statt beginPlayerPhase() jetzt Levelwahl
       beginLevelChoice();
     }
 
@@ -1513,7 +1521,7 @@
     });
 
     function beginPlayerPhase(){
-      levelPanel.classList.add("hidden");     // ✅ NEU
+      levelPanel.classList.add("hidden");
       btnSetNumbers.classList.add("hidden");
       decisionPanel.classList.remove("hidden");
       enterSetAttention();
@@ -1632,7 +1640,6 @@
       busyMove = false;
       clearTargets();
 
-      // ✅ NEU: Panels sauber zurücksetzen
       levelPanel.classList.add("hidden");
       decisionPanel.classList.add("hidden");
 
@@ -1647,21 +1654,16 @@
       }
     });
 
-    /* =========================================================
-       ✅ NEU: Level-Buttons -> aktuell nur Auswahl, dann Start
-       (du kannst später pro Level Regeln/Parameter umhängen)
-       ========================================================= */
     let selectedLevel = null;
 
     function chooseLevel(name){
-      selectedLevel = name; // "Trainee" | "Brainy" | "Brain"
-      // aktuell: direkt ins Spiel starten
+      selectedLevel = name;
       beginPlayerPhase();
     }
 
-    btnLevelTrainee.addEventListener("click", () => { if(busyMove) return; chooseLevel("Trainee"); });
-    btnLevelBrainy.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brainy"); });
+    btnLevelBrainee.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brainee"); });
     btnLevelBrain.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brain"); });
+    btnLevelBrainstorm.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brainstorm"); });
 
     window.addEventListener("load", () => {
       setBoardSquare();
