--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       --kippstrip-h: auto;
 
-      /* ✅ NEU: UI-Cell (= Boardbreite/8) wird per JS gesetzt */
+      /* ✅ UI-Cell (= Boardbreite/8) wird per JS gesetzt */
       --ui-cell: 60px;
 
       --rotSign: 1;
@@ -604,7 +604,7 @@
       position: relative;
     }
 
-    /* ✅ NEU: Score-Panel (rotbraun, 8 Spalten breit, 2 Zeilen hoch) */
+    /* ✅ Score-Panel: unter der Konsole, 8 Spalten breit, 2 Zeilen hoch */
     .scorePanel{
       width: 100%;
       height: calc(var(--ui-cell) * 2);
@@ -613,6 +613,8 @@
       user-select:none;
       overflow: hidden;
     }
+    .scorePanel.underConsole{ margin-top: 0; }
+
     /* Anchor: Mitte zwischen G/H (= 7*cell) und Mitte zwischen Zeile 1/2 (= 1*cell) */
     .scoreAnchor{
       position:absolute;
@@ -625,7 +627,7 @@
       justify-content: center;
       gap: 2px;
       pointer-events: none;
-      z-index: 999999;
+      z-index: 5;
     }
     .gcPoints{
       font-weight: 1000;
@@ -643,6 +645,41 @@
       opacity: 0.92;
       text-shadow: 0 1px 0 rgba(0,0,0,0.35);
       line-height: 1.0;
+    }
+
+    /* ✅ Button "KIPP Bilanz" im Panel: Reihe B bis halbe E, Zeile 1/2 mittig */
+    .kippBilanzBtn{
+      position:absolute;
+      left: calc(var(--ui-cell) * 1);      /* Spalte B Start */
+      top:  calc(var(--ui-cell) * 1);      /* Mitte zwischen Zeile 1 und 2 */
+      transform: translateY(-50%);
+      width: calc(var(--ui-cell) * 3.5);   /* B -> halbe E */
+      height: calc(var(--ui-cell) * 0.85);
+      border-radius: 12px;
+      border: 1px solid rgba(0,0,0,0.35);
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: 1000;
+      letter-spacing: 0.06em;
+      text-transform: none;
+      cursor: pointer;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(255,255,255,0.15) inset;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding: 0 12px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      z-index: 6;
+    }
+    .kippBilanzBtn:active{
+      transform: translateY(-50%) translateY(1px) scale(0.99);
+      filter: brightness(0.97);
     }
 
     .gcBottom{
@@ -916,14 +953,6 @@
         <div id="gameMode" class="modeBlock hidden">
           <div class="gameConsole">
 
-            <!-- ✅ Punkt 1: Panel 1A–2H rotbraun + 00P/Highscore mittig (G/H & Zeile1/2) -->
-            <div class="scorePanel" aria-label="Score Panel">
-              <div class="scoreAnchor">
-                <div id="gcPoints" class="gcPoints">00P</div>
-                <div class="gcHi">Highscore: <span id="gcHi">80</span></div>
-              </div>
-            </div>
-
             <div class="gcBottom" aria-label="Aktionen">
               <button id="btnSetNumbers" class="gcBtn set" type="button">ZAHLEN SETZEN</button>
 
@@ -955,6 +984,19 @@
         </div>
 
       </div>
+
+      <!-- ✅ NEU: ScorePanel sitzt JETZT wirklich unter der schwarzen Konsole -->
+      <div id="scorePanel" class="scorePanel underConsole hidden" aria-label="Score Panel">
+        <button id="btnKippBilanz" class="kippBilanzBtn" type="button" aria-label="KIPP Bilanz">
+          KIPP Bilanz
+        </button>
+
+        <div class="scoreAnchor">
+          <div id="gcPoints" class="gcPoints">00P</div>
+          <div class="gcHi">Highscore: <span id="gcHi">80</span></div>
+        </div>
+      </div>
+
     </div>
 
   </div>
@@ -969,6 +1011,9 @@
     const kippspeedBlock = document.getElementById("kippspeedBlock");
     const speedMode   = document.getElementById("speedMode");
     const gameMode    = document.getElementById("gameMode");
+
+    const scorePanel  = document.getElementById("scorePanel");
+    const btnKippBilanz = document.getElementById("btnKippBilanz");
 
     const btnPlay     = document.getElementById("btnPlay");
     const playGlyph   = document.getElementById("playGlyph");
@@ -1004,7 +1049,7 @@
       const h = Math.round(cell * 3);
       document.documentElement.style.setProperty("--kippstrip-h", h + "px");
 
-      /* ✅ NEU: UI-Cell für ScorePanel */
+      /* ✅ UI-Cell für ScorePanel */
       document.documentElement.style.setProperty("--ui-cell", Math.round(cell) + "px");
     }
 
@@ -1195,6 +1240,7 @@
     function showSpeedMode(){
       speedMode.classList.remove("hidden");
       gameMode.classList.add("hidden");
+      if(scorePanel) scorePanel.classList.add("hidden");
       enterSpeedAttention();
       setPlayGlyph(false);
     }
@@ -1202,6 +1248,8 @@
     function showGameMode(){
       speedMode.classList.add("hidden");
       gameMode.classList.remove("hidden");
+      if(scorePanel) scorePanel.classList.remove("hidden");
+
       btnSetNumbers.classList.remove("hidden");
       decisionPanel.classList.add("hidden");
       levelPanel.classList.add("hidden");
@@ -1666,6 +1714,13 @@
     btnLevelBrainee.addEventListener("click", () => { if(busyMove) return; chooseLevel("Trainee"); });
     btnLevelBrain.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brainee"); });
     btnLevelBrainstorm.addEventListener("click", () => { if(busyMove) return; chooseLevel("Brain"); });
+
+    /* KIPP Bilanz: noch ohne Funktion (nur Platzhalter) */
+    if(btnKippBilanz){
+      btnKippBilanz.addEventListener("click", () => {
+        alert("KIPP Bilanz (noch ohne Funktion)");
+      });
+    }
 
     window.addEventListener("load", () => {
       setBoardSquare();
