Ui panel dunkler
Updated UI panel background color from #6a3524 to #5a2c1e.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      --ui-panel-bg: #6a3524;   /* rotbraun */
+      --ui-panel-bg: #5a2c1e;   /* rotbraun */
       --ui-text: #ead7be;       /* hellbeige */
 
       --kippstrip-h: auto;
